build: updated project metadata and added build.yml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,21 @@ name = "hours"
 version = "0.1.0"
 description = "Log working hours"
 authors = ["Gyorgy Orosz <gyorgy@orosz.link>"]
+maintainers = ["György Orosz <gyorgy@orosz.link>"]
 license = "MIT"
 readme = "README.md"
+classifiers = [
+    'Development Status :: 3 - Alpha',
+    'Intended Audience :: Developers',
+    'Intended Audience :: Science/Research',
+    'License :: OSI Approved :: Apache Software License',
+    'Operating System :: OS Independent',
+    'Programming Language :: Python :: 3.7',
+    'Programming Language :: Python :: 3.8',
+    'Programming Language :: Python :: 3.9',
+    'Programming Language :: Python :: 3.10',
+    'Programming Language :: Python :: 3.11',
+]
 packages = [
     { include = "hours"},
 ]
