--- a/.github/workflow/build.yml
+++ b/.github/workflow/build.yml
@@ -2,7 +2,13 @@ name: Build
 
 on:
   push:
+    branches:
+      - master
+      - develop
   pull_request:
+    branches:
+      - master
+      - develop
 
 jobs:
   build_and_test:
