feat: fixed failing tests and started usingSQLModel's relationships

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Test with pytest
         run: |
-          poetry run pytest -m "not slow"
+          poetry run pytest
 
       - name: Build package
         run: |
