--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,11 +29,22 @@ typer = "^0.9.0"
 xlsxwriter = "^3.1.9"
 sqlmodel = "^0.0.12"
 
+[tool.poetry.group.dev]
+optional = true
+
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
 ruff = "^0.1.6"
 pytest = "^7.4.3"
 coverage = "^7.3.2"
+
+[tool.poetry.group.docs]
+optional = true
+
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.5.3"
+mkdocs-typer = "^0.0.3"
+mkdocs-material = "^9.4.14"
 
 [tool.poetry.scripts]
 hours = "hours.cli:app"
