--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,4 @@
-name: docs
+name: Documentation
 on:
   push:
     branches:
@@ -29,7 +29,7 @@ jobs:
           poetry-version: 1.5.1
 
       - name: Install Python dependencies
-        run: poetry install --with dev --with docs
+        run: poetry install --with docs
 
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
       - uses: actions/cache@v3
