--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "hours"
-version = "0.1.0"
+version = "0.0.0"
 description = "Log working hours"
 authors = ["Gyorgy Orosz <gyorgy@orosz.link>"]
 maintainers = ["György Orosz <gyorgy@orosz.link>"]
@@ -37,6 +37,7 @@ black = "^23.11.0"
 ruff = "^0.1.6"
 pytest = "^7.4.3"
 coverage = "^7.3.2"
+bump2version = "^1.0.1"
 
 [tool.poetry.group.docs]
 optional = true
