--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,3 +46,5 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: dist/*.whl
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
