--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,21 @@ jobs:
         with:
           files: dist/*.whl
 
+      - name: Get latest release info
+        id: query-release-info
+        uses: release-flow/keep-a-changelog-action@v2
+        with:
+          command: query
+          version: latest
+
+      - name: Display release info
+        run: |
+          echo "# v${{ steps.query-release-info.outputs.version }}\n" > release.md
+          echo "\n${{ steps.query-release-info.outputs.release-date }}\n\n" >> release.md
+          echo "${{ steps.query-release-info.outputs.release-notes }}\n" >> release.md
+
       - name: Github release
         uses: softprops/action-gh-release@v1
         with:
           files: dist/*.whl
+          body_path: release.md
